add less and rainbow () support. also make jsl npm style friendly

--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,9 @@ path = bundle/closetag
 [submodule "bundle/Command-T"]
 	path = bundle/Command-T
 	url = https://github.com/vim-scripts/Command-T.git
+[submodule "bundle/less"]
+	path = bundle/less
+	url = https://github.com/groenewege/vim-less.git
+[submodule "bundle/rainbow_parentheses"]
+	path = bundle/rainbow_parentheses
+	url = https://github.com/kien/rainbow_parentheses.vim.git
