add unimpaired and remap arrow keys to text movement

--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@ path = bundle/closetag
 [submodule "bundle/rainbow_parentheses"]
 	path = bundle/rainbow_parentheses
 	url = https://github.com/kien/rainbow_parentheses.vim.git
+[submodule "bundle/unimpaired"]
+	path = bundle/unimpaired
+	url = git://github.com/tpope/vim-unimpaired.git
