add coffee-script bundle

--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@ path = bundle/closetag
 [submodule "bundle/Command-T"]
 	path = bundle/Command-T
 	url = https://github.com/vim-scripts/Command-T.git
+[submodule "bundle/coffee-script"]
+	path = bundle/coffee-script
+	url = https://github.com/kchmck/vim-coffee-script
