rage-fix bats and whitespace handling

--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,6 @@ path = bundle/closetag
 [submodule "bundle/systemd-syntax"]
 	path = bundle/systemd-syntax
 	url = https://github.com/Matt-Deacalion/vim-systemd-syntax.git
+[submodule "bundle/bats"]
+	path = bundle/bats
+	url = https://github.com/rosstimson/bats.vim
